<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/Home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_favourite"
            android:title="@string/Profile" />

        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_profile"
            android:title="@string/Favourite" />
        <item
            android:id="@+id/orders"
            android:icon="@drawable/ic_profile"
            android:title="@string/Orders" />

        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_query"
            android:title="@string/Faq" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/Logout" />
    </group>
</menu>