<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question"
        android:textSize="18dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="#FF0000"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer1"
        android:textSize="18dp"
        android:textStyle="bold"
        android:padding="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question2"
        android:textSize="18dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="#FF0000"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer2"
        android:textSize="18dp"
        android:textStyle="bold"
        android:padding="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question3"
        android:textSize="18dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="#FF0000"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer3"
        android:textSize="18dp"
        android:textStyle="bold"
        android:padding="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question4"
        android:textSize="18dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="#FF0000"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer4"
        android:textSize="18dp"
        android:textStyle="bold"
        android:padding="10dp"/>


</LinearLayout>